<resources>

    <string name="app_name">Messengo</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Messengo</string>

    <string name="menu_refresh">Refresh</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_newmsg">New Message</string>
    <string name="menu_deco">Log Out</string>
    
    
    <string name="loginAccount">Connection</string>
    <string name="GetAccountMsg">Afin d\'utiliser Messengo, nous avons besoin de votre compte gmail utilise sur votre Smartphone. Veuillez nous l\'indiquer ci-dessous :</string>
 
    
    <string name="txtConversationEmpty">Veuillez choisir une conversation à afficher</string>
    
    <!-- GCM -->
    
    <string name="server_registered">Server Registered</string>
    <string name="server_register_error">Error : Server not registered</string>
    <string name="server_unregistered">Server Unregistered</string>
    <string name="server_unregister_error">Error : Server not Unregistered</string>
    
    
</resources>